--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,26 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+  <!-- indexDB link first -->
+  <script src="db.js"></script>
   <script src="index.js"></script>
+
+  <!-- run service worker -->
+  <script type="text/javascript">
+    (function() {
+      if ("serviceWorker" in navigator) {
+        navigator.serviceWorker
+          .register("./service-worker.js")
+          .then(res => {
+            console.log(res);
+            console.log("Service Worker registered successfully.");
+          })
+          .catch(error =>
+            console.log("Service Worker registration failed:", error)
+          );
+      }
+    })();
+  </script>
+
 </body>
 </html>
